--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
         <div class="reveal mb-32">
     <h3 class="section-subtitle">
         FEATURED PORTFOLIO 
-        <span class="text-[10px] opacity-40 ml-2 font-light tracking-widest">| DỰ ÁN TIÊU BIỂU</span>
+        <span class="text-[10px] opacity-60 ml-2 font-light tracking-widest">| DỰ ÁN TIÊU BIỂU</span>
     </h3>
     <p class="text-[11px] text-gray-400 mb-10 max-w-3xl leading-relaxed uppercase tracking-[0.1em]">
-        Hệ thống lưu trữ các sản phẩm 3D được thực hiện bởi <span class="text-[#39c5bb] font-bold">VTP Design Team</span>. Chúng tôi tập trung vào độ chính xác cao và trải nghiệm thị giác đột phá.
+        Hệ thống lưu trữ các sản phẩm 3D được thực hiện bởi <span class="text-[#39c5bb] font-bold">VTP Design Team</span>.
         <br>
-        <span class="text-gray-600 italic normal-case tracking-normal">A curated collection of 3D projects by VTP Design Team, focusing on precision and immersive visual experiences.</span>
+        <span class="text-gray-600 italic normal-case tracking-normal">A curated collection of 3D projects by VTP Design Team.</span>
     </p>
     <div class="gallery-grid" id="main-grid"></div>
 </div>
@@ -102,7 +102,7 @@
         <div class="reveal mt-32">
     <h3 class="section-subtitle">
         3D INTERACTIVE PLAYGROUND 
-        <span class="text-[10px] opacity-40 ml-2 font-light tracking-widest">| KHÔNG GIAN TRẢI NGHIỆM</span>
+        <span class="text-[10px] opacity-60 ml-2 font-light tracking-widest">| KHÔNG GIAN TRẢI NGHIỆM</span>
     </h3>
     <div class="upload-layout">
         <div class="info-card-3d">
@@ -290,6 +290,7 @@
     </script>
 </body>
 </html>
+
 
 
 
