--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
         :root { --miku: #39c5bb; --violet: #8b5cf6; --glass: rgba(255, 255, 255, 0.03); --border: rgba(57, 197, 187, 0.2); }
-        body { font-family: 'Lexend', sans-serif; background-color: #050a09; background-image: radial-gradient(at 0% 0%, rgba(57, 197, 187, 0.1) 0px, transparent 50%), radial-gradient(at 100% 100%, rgba(139, 92, 246, 0.07) 0px, transparent 50%); background-attachment: fixed; color: #e6f7f6; overflow-x: hidden; cursor: none !important; user-select: none; }
+        body { font-family: 'Lexend', sans-serif; background-color: #050a09; background-image: radial-gradient(at 0% 0%, rgba(139, 92, 246, 0.15) 0px, transparent 50%), radial-gradient(at 100% 100%, rgba(139, 92, 246, 0.1) 0px, transparent 50%);; background-attachment: fixed; color: #e6f7f6; overflow-x: hidden; cursor: none !important; user-select: none; }
         a, button, canvas, .viewport-card, label { cursor: none !important; }
         #cursor-follower { width: 20px; height: 20px; border: 2px solid var(--miku); border-radius: 50%; position: fixed; top: 0; left: 0; pointer-events: none; z-index: 99999; transform: translate(-50%, -50%); background: linear-gradient(45deg, rgba(57, 197, 187, 0.2), rgba(139, 92, 246, 0.2)); display: none; }
         @media (max-width: 768px) { #cursor-follower { display: none !important; } body, a, button, canvas, .viewport-card, label { cursor: auto !important; } }
@@ -383,5 +383,6 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
