--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </main>
 
     <footer id="contact" class="py-32 text-center border-t border-[#39c5bb]/10 reveal">
-    <h3 class="text-xl mb-10 contact-title-gradient">Let's work together</h3>
+    <h3 class="text-xl font-black mb-10 contact-title-gradient italic">Let's work together</h3>
     <p class="text-lg font-bold mb-2 text-white">phatvo.0401@gmail.com</p>
     <p class="text-gray-500 text-[11px] uppercase tracking-[0.2em] mb-12">038 477 2414 | CỦ CHI, TP. HỒ CHÍ MINH</p>
     
@@ -405,6 +405,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
