--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@ scene.add(sideLight);
 
         // GALLERY CONFIGURATION
         const myModels = [
-            { id: 'm1', name: 'Hình Dự án', file: 'avt.JPG', type: 'image', author: 'Võ Thành Phát' }, 
-            { id: 'm2', name: 'Con Cụt', file: 'model.stl', type: 'stl', author: 'Võ Thành Phát' }, 
-            { id: 'm3', name: 'Con Gót', file: 'model2.stl', type: 'stl', author: 'Võ Thành Phát' },
+            { id: 'm1', name: 'Hình Dự án', file: 'Demo.mp4', type: 'video', author: 'Võ Thành Phát' }, 
+            { id: 'm2', name: 'Con Cụt', file: 'Demo.mp4', type: 'video', author: 'Võ Thành Phát' }, 
+            { id: 'm3', name: 'Con Gót', file: 'mDemo.mp4', type: 'video', author: 'Võ Thành Phát' },
             { id: 'm4', name: 'Dự án video (Demo)', file: 'Demo.mp4', type: 'video', author: 'Võ Thành Phát' }
         ];
 
@@ -405,6 +405,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
