--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ scene.add(sideLight);
             { id: 'm1', name: 'Hình Dự án', file: 'avt.JPG', type: 'image', author: 'Võ Thành Phát' }, 
             { id: 'm2', name: 'Con Cụt', file: 'model.stl', type: 'stl', author: 'Võ Thành Phát' }, 
             { id: 'm3', name: 'Con Gót', file: 'model2.stl', type: 'stl', author: 'Võ Thành Phát' },
-            { id: 'm4', name: 'Mastodon Dinozord', file: '1229.mp4', type: 'video', author: 'Võ Thành Phát' }
+            { id: 'm4', name: 'Mastodon Dinozord', file: '1229.mp4', type: 'video', author: 'Tiên Tiên' }
         ];
 
         function initGallery3D(id, path) {
@@ -405,6 +405,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
