--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ scene.add(sideLight);
         // GALLERY CONFIGURATION
         const myModels = [
             { id: 'm1', name: 'Tyrannosaurus', file: 'Wontiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
-            { id: 'm2', name: 'Mastodon', file: 'Sabertooth Tiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
+            { id: 'm2', name: 'Mastodon', file: 'Mastodon.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
             { id: 'm3', name: 'Triceratops', file: 'Mastodon.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
             { id: 'm4', name: 'Wontiger', file: 'Wontiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
             { id: 'm5', name: 'Pterodactyl', file: 'Pterodactyl.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
@@ -409,6 +409,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
