--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@ scene.add(sideLight);
 
         // GALLERY CONFIGURATION
         const myModels = [
-            { id: 'm1', name: 'Tyrannosaurus', file: 'Wontiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
-            { id: 'm2', name: 'Mastodon', file: 'Mastodon.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
-            { id: 'm3', name: 'Triceratops', file: 'Mastodon.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
-            { id: 'm4', name: 'Wontiger', file: 'Wontiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
-            { id: 'm5', name: 'Pterodactyl', file: 'Pterodactyl.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
-            { id: 'm6', name: 'Sabertooth Tiger', file: 'Sabertooth Tiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }
+            { id: 'm1', name: 'Wontiger', file: 'Wontiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
+            { id: 'm2', name: 'Tyrannosaurus', file: 'Mastodon.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }, 
+            { id: 'm3', name: 'Mastodon', file: 'Mastodon.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
+            { id: 'm4', name: 'Triceratops', file: 'Wontiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
+            { id: 'm5', name: 'Sabertooth Tiger', file: 'Sabertooth Tiger.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' },
+            { id: 'm6', name: 'Pterodactyl', file: 'Pterodactyl.mp4', type: 'video', author: 'Tiên Tiên', copyright: 'Gaoogao.com Shop' }
         ];
 
         function initGallery3D(id, path) {
@@ -409,6 +409,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
